[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "1.2.5" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
hashing = { git = "https://github.com/anshalshukla/hashing" }
p256 =  { version = "0.13.2", features = ['serde'] }
ed25519-dalek = { version="2.1.1", features=['serde'] }
