[package]
name = "ecdsaguest"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.2.5", default-features = false, features = ['std', 'getrandom'] }
hashing = { git = "https://github.com/anshalshukla/hashing" }
p256 =  { version = "0.13.2", features = ["serde"] }

[patch.crates-io]
p256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", features = ["serde"] }
