[package]
name = "eddsaguest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.2.5", default-features = false, features = ['std', "getrandom"] }
hashing = { git = "https://github.com/anshalshukla/hashing" }
ed25519-dalek = { version="2.1.1", features=['serde'] }