[package]
name = "keccak256guest"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.2.5", default-features = false, features = ['std'] }
hashing = { path = "/Users/anshal/work/hashing" }

[patch.crates-io]
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak" }