[package]
name = "sha256guest"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.2.5", default-features = false, features = ['std', "getrandom"] }
hashing = { git = "https://github.com/anshalshukla/hashing" }

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes" }